--- a/Site.master
+++ b/Site.master
@@ -14,6 +14,9 @@
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
+    <link href="/Content/bootstrap-theme.css" rel="stylesheet" />
+    <link href="/Content/bootstrap.css" rel="stylesheet" />
+
         <%--CONTENT CSS--%>
     <asp:ContentPlaceHolder ID="MainContent_CSS" runat="server">
     </asp:ContentPlaceHolder>
