Temporarily fixed styling and added ISK

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -19,6 +19,10 @@ textarea {
     max-width: 280px;
 }
 
+.userDetails {
+    display: block;
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .jumbotron {
