Added the 404 kitty and logic to go with her

--- a/css/pages/APIlanding.css
+++ b/css/pages/APIlanding.css
@@ -22,3 +22,16 @@
     font-weight: 600
 }
 
+#MainContent_labelvCode {
+    word-wrap: normal; 
+    word-break: break-all;
+}
+
+#extraDetails {
+    color: darkgray
+}
+
+
+#ButtonCentre {
+    margin-top: 15px;
+}
